<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="net.paonejp.kndzyb.appauthdemo.MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        style='style="?android:attr/buttonBarStyle'
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/uSigninButton"
            style='style="?android:attr/buttonBarButtonStyle'
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClickSigninButton"
            android:text="@string/ui_singin_button_label" />

        <Button
            android:id="@+id/uSignoutButton"
            style='style="?android:attr/buttonBarButtonStyle'
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClickSignoutButton"
            android:text="@string/ui_singout_button_label" />

        <Button
            android:id="@+id/uCallApiButton"
            style='style="?android:attr/buttonBarButtonStyle'
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClickCallApiButton"
            android:text="@string/ui_call_api_button_label" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        style='style="?android:attr/buttonBarStyle'
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <Button
            android:id="@+id/uShowStateButton"
            style='style="?android:attr/buttonBarButtonStyle'
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClickShowStatusButton"
            android:text="@string/ui_show_state_button_label" />

        <Button
            android:id="@+id/uTokenRefreshButton"
            style='style="?android:attr/buttonBarButtonStyle'
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClickTokenRefreshButton"
            android:text="@string/ui_token_refresh_button_label" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/uScrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="appAuthState (Summary)" />

            <TextView
                android:id="@+id/uAppAuthStateView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="15dp"
                android:fontFamily="monospace"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Response" />

            <TextView
                android:id="@+id/uResponseView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="15dp"
                android:fontFamily="monospace"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="appAuthState (Full)" />

            <TextView
                android:id="@+id/uAppAuthStateFullView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="15dp"
                android:fontFamily="monospace"
                android:textColor="@android:color/black" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
